Replace internal sun.misc APIs with standard Java APIs in PKI
- Replace sun.misc.BASE64Encoder/BASE64Decoder with java.util.Base64
- Replace sun.misc.IOUtils.readFully with standard InputStream reading
- Hex-encode SHA-512 digest instead of using new String(byte[]) which
  produced garbled output
- Remove unused org.apache.commons.net.util.Base64 import
- Use StandardCharsets.UTF_8 for consistent encoding

These internal sun.misc APIs were removed in Java 9+, breaking
compatibility with modern JDK versions.

https://claude.ai/code/session_01V1J7i1SzefZqvbMrMc6aGK