@@ -1,6 +1,9 @@
 package com.synload.framework.security;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.security.KeyFactory;
 import java.security.KeyPair;
@@ -12,13 +15,13 @@ import java.security.PublicKey;
 import java.security.Security;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import javax.crypto.Cipher;
 
 import com.synload.eventsystem.events.annotations.Event;
-import org.apache.commons.net.util.Base64;
 import org.apache.http.HttpEntity;
 import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.HttpClient;
@@ -40,10 +43,6 @@ import com.synload.framework.handlers.Response;
 import com.synload.framework.ws.WSHandler;
 import com.synload.framework.ws.annotations.WSEvent;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-import sun.misc.IOUtils;
-
 public class PKI {
     private PrivateKey serverPrivateKey = null;
     private PublicKey serverPublicKey = null;
@@ -54,7 +53,12 @@ public class PKI {
     }
     public void sendKeysToPubKeyServers(String publicKey) throws NoSuchAlgorithmException{
     	MessageDigest md = MessageDigest.getInstance("SHA-512");
-    	String sha512 = new String(md.digest(publicKey.getBytes()));
+    	byte[] digestBytes = md.digest(publicKey.getBytes(StandardCharsets.UTF_8));
+    	StringBuilder hexString = new StringBuilder();
+    	for (byte b : digestBytes) {
+    	    hexString.append(String.format("%02x", b));
+    	}
+    	String sha512 = hexString.toString();
     	HttpClient httpClient = HttpClients.custom().build();
     	for( HashMap<String, String> server : SynloadFramework.pubkeyServers ){
 	    	RequestBuilder reqBuilder = RequestBuilder.post().setUri("http://"+server.get("address")+"/auth.php");
@@ -65,7 +69,16 @@ public class PKI {
 			try {
 				CloseableHttpResponse response = (CloseableHttpResponse) httpClient.execute(post);
 				HttpEntity entity = response.getEntity();
-				String content = new String(IOUtils.readFully(entity.getContent(), (int)entity.getContentLength(), false));
+				String content;
+				try (InputStream is = entity.getContent()) {
+				    ByteArrayOutputStream baos = new ByteArrayOutputStream();
+				    byte[] buffer = new byte[4096];
+				    int bytesRead;
+				    while ((bytesRead = is.read(buffer)) != -1) {
+				        baos.write(buffer, 0, bytesRead);
+				    }
+				    content = baos.toString(StandardCharsets.UTF_8.name());
+				}
 				if(content.equals("OK")){
 					Log.info("Sent "+server.get("address")+" the key hash", PKI.class);
 				}else{
@@ -87,8 +100,7 @@ public class PKI {
 			KeyPair kp = kpg.genKeyPair();
 			this.setServerPublicKey(kp.getPublic());
 			this.setServerPrivateKey(kp.getPrivate());
-			BASE64Encoder encoder = new BASE64Encoder();
-			//Log.info(encoder.encode(this.getServerPublicKey().getEncoded()), PKI.class);
+			//Log.info(Base64.getEncoder().encodeToString(this.getServerPublicKey().getEncoded()), PKI.class);
 		} catch (NoSuchAlgorithmException e) {
 			e.printStackTrace();
 		}
@@ -100,10 +112,9 @@ public class PKI {
     		Security.addProvider(new BouncyCastleProvider());
     		try {
     			String cpk = event.getRequest().getData().get("cpk");
-    			BASE64Decoder decoder = new BASE64Decoder();
-    			byte[] pubKey = decoder.decodeBuffer(
+    			byte[] pubKey = Base64.getDecoder().decode(
     				decrypt(
-						cpk, 
+						cpk,
 						event.getSession().getPki().getServerPrivateKey()
 					)
 				);
@@ -148,7 +159,7 @@ public class PKI {
     	String rdata = "";
         byte[] cipherText = null;
         //System.out.println(Base64.encodeBase64String(key.getEncoded()));
-    	BASE64Encoder encoder = new BASE64Encoder();
+    	Base64.Encoder encoder = Base64.getEncoder();
     	try {
     		Pattern regex = Pattern.compile("((.|[\r\n]){1,50})");
     		Matcher regexMatcher = regex.matcher(data);
@@ -157,11 +168,11 @@ public class PKI {
     			//System.out.println(toEn);
         		final Cipher cipher = Cipher.getInstance("RSA");
 				cipher.init(Cipher.ENCRYPT_MODE, key);
-			    cipherText = cipher.doFinal(encoder.encode(toEn.getBytes("UTF-8")).getBytes());
+			    cipherText = cipher.doFinal(encoder.encodeToString(toEn.getBytes(StandardCharsets.UTF_8)).getBytes());
 				if(rdata.equals("")){
-					rdata=encoder.encode(cipherText);
+					rdata=encoder.encodeToString(cipherText);
 				}else{
-					rdata=rdata+"&"+encoder.encode(cipherText);
+					rdata=rdata+"&"+encoder.encodeToString(cipherText);
 				}
     		} 
     	} catch (Exception ex) {
@@ -174,14 +185,14 @@ public class PKI {
     	String decryptedText = "";
     	//System.out.println(Base64.encodeBase64String(key.getEncoded()));
         try {
+        	Base64.Decoder decoder = Base64.getDecoder();
         	for(String toEn: data.split("&")){
         		final Cipher cipher = Cipher.getInstance("RSA");
         		cipher.init(Cipher.DECRYPT_MODE, key);
-        		BASE64Decoder decoder = new BASE64Decoder();
         		if(decryptedText.equals("")){
-        			decryptedText = new String(cipher.doFinal(decoder.decodeBuffer(toEn)));
+        			decryptedText = new String(cipher.doFinal(decoder.decode(toEn)));
         		}else{
-        			decryptedText = decryptedText + new String(cipher.doFinal(decoder.decodeBuffer(toEn)));
+        			decryptedText = decryptedText + new String(cipher.doFinal(decoder.decode(toEn)));
         		}
         	}
         } catch (Exception ex) {
